Fix spacing issues

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,7 +7,7 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 10rem 0 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -17,6 +17,7 @@
   background-size: cover;
   min-height: 100vh;
   height: 100vh;
+  background-position: center;
 }
 
 .footer {
@@ -52,6 +53,11 @@
   font-size: 6vw;
   letter-spacing: 0.5em;
   text-transform: uppercase;
+  text-shadow: 0 0 20px #0000004a;
+}
+
+.shadows {
+  text-shadow: 0 0 5px #000000db;
 }
 
 .title,
